<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/gbackground"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/menubg2" />

    <Button
        android:id="@+id/button_ordinary"
        android:layout_width="274dp"
        android:layout_height="60dp"
        android:layout_marginTop="74dp"
        android:background="@drawable/main_menu_buttons"
        android:fontFamily="@font/handwritteninstitute"
        android:gravity="center"
        android:text="@string/normal_mode"
        android:textColor="#FFFFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <Button
        android:id="@+id/obstacle_course_mode"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/main_menu_buttons"
        android:fontFamily="@font/handwritteninstitute"
        android:gravity="center"
        android:text="@string/obstacle_course_mode"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/menu"
        android:layout_width="274dp"
        android:layout_height="60dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/main_menu_buttons"
        android:fontFamily="@font/handwritteninstitute"
        android:gravity="center"
        android:text="@string/backtoMenu"
        android:textColor="#FFFFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554" />
</androidx.constraintlayout.widget.ConstraintLayout>