<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/gbackground"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menubg2" />

    <Button
        android:id="@+id/button_play"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/main_menu_buttons"
        android:gravity="center"
        android:text="@string/Играть"
        android:fontFamily="@font/handwritteninstitute"
        android:textColor="#FFFFFFFF"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426"/>

    <Button
        android:id="@+id/exit"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:background="@drawable/main_menu_buttons"
        android:gravity="center"
        android:text="@string/Выход"
        android:fontFamily="@font/handwritteninstitute"
        android:textColor="#FFFFFFFF"
        android:textSize="52sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642"
        android:layout_marginBottom="70dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>