<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.example.snake.GameView
        android:id="@+id/gv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:background="#0C2200"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentTop="true"
        android:alpha="0.8">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/img_apple"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/redapple"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/txt_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="x 0"
                    android:fontFamily="@font/handwritteninstitute"
                    android:textSize="30sp"
                    android:layout_marginTop="7dp"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_cup"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/cup" />

                <TextView
                    android:id="@+id/txt_best_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="x 0"
                    android:fontFamily="@font/handwritteninstitute"
                    android:textSize="30sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/img_swipe"
        android:visibility="invisible"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/swipe"
        android:scaleType="fitXY"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="135dp"/>

    <GridLayout
        android:id="@+id/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="34dp"
        android:layout_marginBottom="10dp"
        android:columnCount="4"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnleft"
            android:layout_width="70dp"
            android:layout_height="62dp"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@drawable/buttonstyle"
            android:gravity="center"
            android:text="@string/left"
            android:textColor="@android:color/black"
            android:textSize="33sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btntop"
            android:layout_width="70dp"
            android:layout_height="62dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/buttonstyle"
            android:gravity="center"
            android:text="@string/up"
            android:textColor="@android:color/black"
            android:textSize="33sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnright"
            android:layout_width="70dp"
            android:layout_height="62dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:background="@drawable/buttonstyle"
            android:gravity="center"
            android:text="@string/right"
            android:textColor="@android:color/black"
            android:textSize="33sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnbottom"
            android:layout_width="70dp"
            android:layout_height="62dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:background="@drawable/buttonstyle"
            android:gravity="center"
            android:text="@string/down"
            android:textColor="@android:color/black"
            android:textSize="33sp"
            android:textStyle="bold" />
    </GridLayout>
</RelativeLayout>